# climate-data

./: .cruft.json  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  mkdocs.yml.rej  objects.inv  pyproject.toml  pyproject.toml.rej
.github/workflows/: build_docs.yml  cookiecutter.yml  dependencies.yml  test.yml
docs/: api_docs.md  index.md  installation.md  methods.md
installation/: index.html
methods/: index.html
reference/SUMMARY/: index.html
reference/climate_data/: index.html
reference/climate_data/aggregate/: index.html
reference/climate_data/aggregate/hierarchy/: index.html
reference/climate_data/aggregate/pixel/: index.html
reference/climate_data/aggregate/utils/: index.html
reference/climate_data/cli/: index.html
reference/climate_data/cli_options/: index.html
reference/climate_data/constants/: index.html
reference/climate_data/data/: index.html
reference/climate_data/diagnostics/: index.html
reference/climate_data/diagnostics/grid_plots/: index.html
reference/climate_data/diagnostics/utils/: index.html
reference/climate_data/downscale/: index.html
reference/climate_data/downscale/prepare_predictors/: index.html
reference/climate_data/downscale/prepare_training_data/: index.html
reference/climate_data/extract/: index.html
reference/climate_data/extract/cmip6/: index.html
reference/climate_data/extract/elevation/: index.html
reference/climate_data/extract/era5/: index.html
reference/climate_data/extract/ncei_climate_stations/: index.html
reference/climate_data/extract/rub_local_climate_zones/: index.html
reference/climate_data/generate/: index.html
reference/climate_data/generate/draws/: index.html
reference/climate_data/generate/historical_daily/: index.html
reference/climate_data/generate/historical_reference/: index.html
reference/climate_data/generate/scenario_annual/: index.html
reference/climate_data/generate/scenario_daily/: index.html
reference/climate_data/generate/scenario_inclusion/: index.html
reference/climate_data/generate/temperature_zones/: index.html
reference/climate_data/generate/utils/: index.html
reference/climate_data/special/: index.html
reference/climate_data/special/compile_person_days/: index.html
reference/climate_data/special/temperature_person_days/: index.html
reference/climate_data/special/temperature_zone/: index.html
reference/climate_data/special/utils/: index.html
reference/climate_data/utils/: index.html
scripts/: gen_data_pages.py  scenario_inclusion_metadata.parquet
search/: search_index.json
src/climate_data/: __init__.py  cli.py  cli_options.py  constants.py  data.py  jobmon_utils.py  utils.py
src/climate_data/aggregate/: __init__.py  hierarchy.py  pixel.py  utils.py
src/climate_data/diagnostics/: __init__.py  grid_plots.py  utils.py
src/climate_data/downscale/: __init__.py  prepare_predictors.py  prepare_training_data.py
src/climate_data/extract/: __init__.py  cmip6.py  elevation.py  era5.py  ncei_climate_stations.py  rub_local_climate_zones.py
src/climate_data/generate/: README.md  __init__.py  derived_daily.py  draws.py  historical_daily.py  historical_reference.py  scenario_annual.py  scenario_daily.py  scenario_inclusion.py  utils.py
src/climate_data/generate/supplementary_data/: dengue_suitability.parquet  mal_den_temp_suitability_df.csv  malaria_suitability.parquet
src/climate_data/special/: __init__.py  compile_person_days.py  temperature_person_days.py  temperature_zone.py  utils.py
src/climate_downscale/: cli.py  cli_options.py  data.py  utils.py
src/climate_downscale/downscale/: __init__.py  prepare_predictors.py  prepare_training_data.py
src/climate_downscale/extract/: README.md  __init__.py  cmip.py  cmip6.py  elevation.py  era5.py  ncei_climate_stations.py  rub_local_climate_zones.py  srtm_elevation.py
src/climate_downscale/generate/: README.md  __init__.py  cmip6_daily.py  cmip_daily.py  derived_daily.py  era5_daily.py  historical_daily.py  historical_reference.py  scenario_annual.py  scenario_daily.py  scenario_inclusion.py  utils.py
src/climate_downscale/model/: __init__.py  prepare_era5_daily.py  prepare_predictors.py  prepare_training_data.py
src/climate_downscale/old_climate/: data.py  project_anomaly.py  project_climate.py
temperature/: 00_launch_scripts.ipynb  README.md  daily_preds_nc.py  merge_era5_stations_script_v3.py  regional_predictions.py
temperature/grid_setup/: grid_setup_with_elevation_v3.py  grid_setup_with_era5_v3.py
temperature/pre_launch_scripts/climate_zones/: local_climate_zone_resampling.ipynb  readme.txt
temperature/pre_launch_scripts/era5_data/: cdsapi_run.py  download_era5_daily_data.ipynb  era5_data_hourly_to_daily.py
tests/: test_climate_downscale.py
(+8 files in other folders)
